--- a/.github/workflows/scan-one.yml
+++ b/.github/workflows/scan-one.yml
@@ -6,14 +6,14 @@ on:
 
 jobs:
   endor-scan:
-    uses: endorlabs/endor-github-workflow/.github/workflows/scan-with-endorlabs.yml@v0
+    uses: kdogra4/endor-github-workflow/.github/workflows/scan-with-endorlabs.yml@main
     permissions:
       id-token: write      # allows authentication to Endor Labs using Actions OIDC JWT Token
       contents: read       # allows this job to clone org repos
     with:
-      git-url: "https://github.com/darrenpmeyer/logging-formatter-anticrlf.git" 
+      git-url: "https://github.com/kdogra4/hearts-github.git" 
       namespace: ${{ vars.ENDOR_NAMESPACE }}
-      upload-json: true
+      upload-json: false
       is-pr: true
     secrets:
       endorlabs-api-auth: ${{ secrets.ENDORLABS_API_AUTH }}
